# order-supervisor-ai

./: .env.example  .gitignore  README.md  architecture_note.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  create_demo_data.py  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: __init__.py  events.py  runs.py  supervisors.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  supabase_service.py  temporal_service.py
backend/app/temporal/: __init__.py  activities.py  shared.py  worker.py  workflows.py
backend/app/tools/: __init__.py
backend/tests/: test_api.py
frontend/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/runs/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/supervisors/: page.tsx
frontend/components/dashboard/: activity-chart.tsx  status-distribution.tsx
frontend/components/layout/: app-shell.tsx  page-header.tsx  providers.tsx  sidebar.tsx
frontend/components/runs/: actions-list.tsx  event-injector.tsx  instruction-panel.tsx  memory-viewer.tsx  run-card.tsx  start-run-dialog.tsx  timeline.tsx
frontend/components/supervisors/: supervisor-card.tsx  supervisor-form.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  empty-state.tsx  input.tsx  select.tsx  tabs.tsx
frontend/hooks/: use-runs.ts  use-supervisors.ts
frontend/lib/: api.ts  types.ts  utils.ts
tests/: supervisor_tests.py
(+3 files in other folders)
